--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ header {
   left: 0;
   right: 0;
   padding: 2rem 0;
-  /* clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); */
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   transition: all .3s ease-in-out;
 }
 
